--- a/resources/include/navigation.html
+++ b/resources/include/navigation.html
@@ -1,4 +1,4 @@
-<!-- Navigation -->
+<!-- Navigation TODO This is currently not used (kept for reference only) -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <p class="navbar-brand mb-0">CivBuddy</p>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
