--- a/resources/css/civbuddy.css
+++ b/resources/css/civbuddy.css
@@ -37,14 +37,15 @@ div.card-clickable:hover {
 }
 div.card-clickable:hover > div.card-header {
     background-color: #36587d;
-    margin: 0;
-    padding: 0;
 }
 
 div.card-civbuddy div.card-body {
     position: relative;
-    padding-top: 1.1rem;
+    padding-top: 0.1rem;
     padding-bottom: 1.1rem;
+}
+div.card-civbuddy.card-status-owned div.card-body {
+    padding: 1.1rem 1.25rem;
 }
 div.card-civbuddy div.card-nominal-cost, div.card-civbuddy div.card-current-cost {
     width: 20%;
@@ -58,16 +59,34 @@ div.card-civbuddy div.card-nominal-cost {
     border-bottom: 1px solid rgba(0,0,0,0.125);
     border-top-right-radius: calc(0.25rem - 1px);
 }
+div.card-civbuddy.card-status-owned div.card-nominal-cost {
+    color: white;
+}
 div.card-civbuddy div.card-current-cost {
     position: absolute;
     top: 0;
     right: 0;
+    height: 100%;
     background-color: #444444;
     font-weight: bold;
     border-bottom-left-radius: calc(0.25rem - 1px);
+    text-align: center;
+    display: flex;
+    justify-content: center; /* align horizontal */
+    align-items: center; /* align vertical */
 }
 div.card-civbuddy div.card-combined-header {
     border-bottom: 1px solid rgba(0,0,0,0.125);
+}
+div.card-civbuddy div.card-combined-header:hover > div.card-header {
+    background-color: #555555;
+}
+div.card-civbuddy div.card-combined-header:hover > div.card-nominal-cost {
+    color: #bbbbbb;
+    background-color: #666666;
+}
+div.card-civbuddy div.card-combined-header:hover div.info-button {
+    color: #00dfa7;
 }
 div.card-civbuddy div.card-combined-header > div.card-header {
     display: inline-block;
@@ -76,8 +95,25 @@ div.card-civbuddy div.card-combined-header > div.card-header {
     padding-top: 0.6rem;
     padding-bottom: 0.6rem;
 }
-div.card-civbuddy .card-bonus-info > span {
+div.card-civbuddy div.card-combined-header div.info-button {
+    float: right;
+    padding-right: 0.5rem;
+}
+div.card-civbuddy .card-credits-info > span {
     color: white;
+}
+div.card-civbuddy .card-credits-info > i {
+    color: #3498DB;
+}
+div.card-civbuddy.card-status-planned p.card-credits-info > i {
+    color: #777777;
+}
+div.card-civbuddy div.card-combined-title {
+    padding: 1.1rem 1.25rem 0;  /* top horiz bottom */
+    position: relative;
+}
+div.card-civbuddy.card-status-planned div.card-current-cost {
+    background-color: #00c997;  /* 00bc8c */
 }
 
 div.modal-dialog {
