--- a/resources/css/civbuddy.css
+++ b/resources/css/civbuddy.css
@@ -83,6 +83,7 @@ div.card-civbuddy div.card-current-cost {
     right: 0;
     height: 100%;
     background-color: #444444;
+    font-size: 1rem;
     font-weight: bold;
     border-bottom-left-radius: calc(0.25rem - 1px);
     text-align: center;
