--- a/resources/css/civbuddy.css
+++ b/resources/css/civbuddy.css
@@ -18,14 +18,14 @@ div.card-container {
     margin-top: calc(70px + 1.5rem);
 }
 
-img.flag {
-    height: 1em;
+img {
     position: relative;
+    height: 1em;
+}
+img.flag {
     top: -3px;
 }
 .card img {
-    height: 1em;
-    position: relative;
     top: -2px;
     margin-right: 0.5em;
 }
@@ -179,4 +179,42 @@ div.modal-dialog {
 .dropdown-menu { /* fix dropdown menu disappearing off-screen on the right side */
     right: 0;
     left: auto;
+}
+
+/* Sticky footer styles
+ * --------------------------------------------------
+ */
+html {
+    position: relative;
+    min-height: 100%;
+}
+body {
+    margin-bottom: 60px; /* Margin bottom by footer height */
+}
+.footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 60px; /* Set the fixed height of the footer here */
+    line-height: 60px; /* Vertically center the text there */
+}
+.footer .progress {
+    height: 14px;
+    margin: 23px 0;
+}
+.footer img {
+    font-size: 50px;
+    top: 5px;
+}
+.footer a.nav-link {
+    margin: 0;
+    padding: 0;
+}
+.footer p.funds-info-text {
+    line-height: 1;
+    margin: 0;
+    text-align: center;
+}
+.footer p.funds-info-text > span {
+    color: white;
 }
