--- a/resources/include/head.html
+++ b/resources/include/head.html
@@ -38,5 +38,5 @@
 
     <script id="flagTemplate" type="x-tmpl-mustache">
         {{#menuText}}<a class="nav-link" href="#" onclick="CivBuddy.buttonClick(this, '@@pageName@@', 'switchLanguage', '{{ alt }}')">{{/menuText}}<img
-            class="flag{{#menuText}} mr-2{{/menuText}}" src="img/{{ fileName }}.svg" alt="{{ alt }}">{{ menuText }}{{#menuText}}</a>{{/menuText}}
+            class="flag{{#menuText}} mx-2{{/menuText}}" src="img/{{ fileName }}.svg" alt="{{ alt }}">{{ menuText }}{{#menuText}}</a>{{/menuText}}
     </script>
