Split CSS into page specific and common sections

--- a/resources/include/head.html
+++ b/resources/include/head.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" crossorigin="anonymous" href="css/bootstrap.min.css">
     <link rel="stylesheet" crossorigin="anonymous" href="css/open-iconic-bootstrap.min.css">
     <link rel="stylesheet" crossorigin="anonymous" href="css/civbuddy.css">
+    <link rel="stylesheet" crossorigin="anonymous" href="css/@@pageName@@.css">
 
     <meta name="defaultLanguage" content="en">
     <meta name="availableLanguages" content="de, en">
