Add card info modal to 'cards' page

--- a/resources/css/cards.css
+++ b/resources/css/cards.css
@@ -201,3 +201,20 @@ body {
 .footer .funds-icon {
     min-width: 60px;
 }
+
+
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+ * Card Info
+ * - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
+
+.row > .card-groups, .row > .card-groups {
+    min-width: 34px;
+}
+.modal-title > img,
+.card-groups > img {
+    height: 0.9em;
+    top: -2px;
+}
+.modal-title > img:last-child {
+    margin-right: 0.5rem;
+}
