Add 'discard' button to "un-own" a card

--- a/resources/css/civbuddy.css
+++ b/resources/css/civbuddy.css
@@ -85,7 +85,7 @@ div.modal-dialog {
  * Miscellaneous Fixes
  * - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 
-button:hover {
+button:not(.disabled):hover {
     cursor: pointer;
 }
 
