--- a/resources/css/cards.css
+++ b/resources/css/cards.css
@@ -132,7 +132,8 @@ div.card-civbuddy .card-credits-info > i {
     color: #3498DB;
 }
 div.card-civbuddy.card-status-planned p.card-credits-info > i,
-div.card-civbuddy.hovered p.card-credits-info > i {
+div.card-civbuddy.card-status-absent.hovered p.card-credits-info > i,
+div.card-civbuddy.card-status-discouraged.hovered p.card-credits-info > i {
     color: #777777;
 }
 div.card-civbuddy div.card-combined-title {
@@ -151,6 +152,9 @@ div.card-civbuddy.card-status-discouraged.hovered div.card-current-cost {
 div.card-civbuddy.card-status-absent div.card-body > p.card-status-expl,
 div.card-civbuddy.card-status-planned div.card-body > p.card-status-expl {
     display: none;
+}
+div.card-civbuddy.card-status-discouraged.hovered div.card-body > p.card-status-expl {
+    color: #cccccc !important;  /* from .text-muted */
 }
 
 
