Align navbar layout on the different pages

--- a/resources/css/civbuddy.css
+++ b/resources/css/civbuddy.css
@@ -32,6 +32,9 @@ body {
     flex-wrap: nowrap;
     width: 100%;
 }
+.navbar .row ul {
+    width: min-content;
+}
 .navbar a.nav-link, .navbar p {
     white-space: nowrap;
 }
