Rename localization dir from 'locales' to 'i18n'

--- a/resources/include/head.html
+++ b/resources/include/head.html
@@ -9,7 +9,7 @@
 
     <meta name="defaultLanguage" content="en">
     <meta name="availableLanguages" content="de, en">
-    <link rel="localization" href="locales/civbuddy.{locale}.ftl">
+    <link rel="localization" href="i18n/civbuddy.{locale}.ftl">
 
     <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-touch-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-touch-icon-60x60.png">
