--- a/resources/include/head.html
+++ b/resources/include/head.html
@@ -31,13 +31,13 @@
     <meta name="msapplication-TileImage" content="favicon/mstile-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha384-xBuQ/xzmlsLoJpyjoggmTEz8OWUFM0/RC5BsqQBDX2v5cMvDHcMakNTNrHIW2I5f"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" crossorigin="anonymous"
+        integrity="sha384-xBuQ/xzmlsLoJpyjoggmTEz8OWUFM0/RC5BsqQBDX2v5cMvDHcMakNTNrHIW2I5f"></script>
     <script src="js/civbuddy.js"></script>
     <script type="text/javascript">$(document).ready(CivBuddy.initPage('@@pageName@@'));</script>
     <script defer src="js/l20n.min.js"></script>  <!-- should be first deferred script -->
 
     <script id="flagTemplate" type="x-tmpl-mustache">
-        {{#menuText}}<a class="nav-link" href="#" onclick="CivBuddy.buttonClick(this, '@@pageName@@', 'switchLanguage', '{{ alt }}')">{{/menuText}}<img
-            class="flag{{#menuText}} mx-2{{/menuText}}" src="img/{{ fileName }}.svg" alt="{{ alt }}">{{ menuText }}{{#menuText}}</a>{{/menuText}}
+        <a class="nav-link" href="#" onclick="CivBuddy.buttonClick(this, '@@pageName@@', 'switchLanguage', '{{ alt }}')"
+            ><img class="flag mx-2" src="img/{{ fileName }}.svg" alt="{{ alt }}"></img>{{ menuText }}</a>
     </script>
