Show version number in warning color when build included untracked or uncommitted changes

--- a/version.ejs
+++ b/version.ejs
@@ -3,5 +3,6 @@
 	"buildDate":  <%= extras.timestamp %>,
 	"version":    "<%= package.version %>",
 	"numCommits": <%= extras.gitNumCommits %>,
-	"hash":       "<%= extras.githash %>"
+	"hash":       "<%= extras.githash %>",
+	"dirty":      <%= extras.dirty %>
 }
