--- a/resources/css/civbuddy.css
+++ b/resources/css/civbuddy.css
@@ -102,3 +102,14 @@ nav.navbar div.dropdown-menu-right {
     right: 0;
     left: auto;
 }
+
+/* make text non-selectable */
+.noselect {
+    -webkit-touch-callout: none; /* iOS Safari */
+      -webkit-user-select: none; /* Safari */
+       -khtml-user-select: none; /* Konqueror HTML */
+         -moz-user-select: none; /* Firefox */
+          -ms-user-select: none; /* Internet Explorer/Edge */
+              user-select: none; /* Non-prefixed version, currently
+                                    supported by Chrome and Opera */
+}
