Convert our CSS to SASS

--- a/src/sass/cards.scss
+++ b/src/sass/cards.scss
@@ -1,5 +1,5 @@
 /*
- * CSS specific to the 'cards' page.
+ * CSS specific to the 'cards' page (cards.html).
  */
 
 
@@ -7,7 +7,7 @@
  * Navbar on 'cards' page
  * - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 
-.navbar span.oi.oi-eye {
+ .navbar span.oi.oi-eye {
     top: 3px;
     font-size: 1em;
 }
