--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -6,3 +6,10 @@
 // Card background activated on hover (games, players pages)
 $civbuddy-card-hover-background: #253c55;
 $civbuddy-card-hover-headerbackground: lighten($civbuddy-card-hover-background, 10%);
+
+
+// work around some padding issues in our navbars
+@mixin civbuddy-navbar-fix-padding() {
+    font-size: 1.171875rem;
+    padding: 0.5rem 0;  /* 2x 0.32421875rem */
+}
